<resources>
    <string name="app_name">普洛斯金融</string>
    <string name="company_information">企业资料</string>
    <string name="change_password">修改密码</string>
    <string name="password">密码</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="sure_password">确认密码</string>
    <string name="mobile_illegal">您输入的手机号码有误</string>
    <string name="check_code_cannot_be_empty">验证码不能为空</string>
    <string name="password_length_illegal">密码长度不合法</string>
    <string name="password_is_not_equels_old_password">输入的密码不一致</string>
    <string name="password_input_hint">请输入6-16位密码</string>
    <string name="phone_number_null">手机号不能为空</string>
    <string name="password_null">密码不能为空</string>
    <string name="organize_code">组织机构代码</string>
    <string name="tax_number">税务号</string>
    <string name="address">地址</string>
    <string name="corporate">法人</string>
    <string name="model">规模</string>
    <string name="industry">行业</string>
    <string name="contact">联系电话</string>
    <string name="register">注册</string>
    <string name="no_register">还没有账号,立即注册</string>
    <string name="action_settings">Settings</string>
    <string name="workplace">工作区</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="splash_content">专注快速构建IT业务</string>
    <string name="login">登陆</string>
    <string name="send_success">发送成功</string>
    <string name="login_success">登录成功</string>
    <string name="go_login">去登陆</string>
    <string name="go_login_to_look">只有登录后才能查看哦!</string>
    <string name="forget_login">已有账号,立即登录</string>
    <string name="toinwork">Toinwork.com</string>
    <string name="no_message_read">暂时没有已读消息哦~</string>
    <string name="no_data">没有数据</string>
    <string name="name">姓名</string>
    <string name="repay_plan">还款计划</string>
    <string name="loan_contract">借款合同</string>
    <string name="loan_number">借款金额</string>
    <string name="contract_time">合约时间</string>
    <string name="repay_way">还款方式</string>
    <string name="all_interest">总利息</string>
    <string name="designation">名称</string>
    <string name="sex">性别</string>
    <string name="job">职务</string>
    <string name="mobile">手机</string>
    <string name="email">邮箱</string>
    <string name="face">头像</string>
    <string name="feedback">反馈我们</string>
    <string name="forget_password">忘记密码</string>
    <string name="reset_password">重置密码</string>
    <string name="help_center">帮助中心</string>
    <string name="about_us">关于我们</string>
    <string name="safe_exit">安全退出</string>
    <string name="sure_commit">确认提交</string>
    <string name="sure">确认</string>
    <string name="commit">提交</string>
    <string name="mine">我的</string>
    <string name="home">首页</string>
    <string name="account">账单</string>


    <!--edittext相关文本-->
    <string name="hint_phone">输入手机号</string>
    <string name="hint_username">输入手机号</string>
    <string name="hint_code">请输入验证码</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_old_pwd">请输入原密码</string>
    <string name="hint_new_pwd">请输入新密码</string>
    <string name="hint_sure_pwd">请确认密码</string>
    <string name="hint_feedback">请输入需要反馈的问题.</string>

    <string name="edit">编辑</string>
    <string name="cancle">取消</string>
    <string name="QQ">QQ</string>
    <string name="weixin_circle">朋友圈</string>
    <string name="weixin">微信</string>
    <string name="sina">新浪微博</string>
    <string name="sms">短信</string>
    <string name="copy_url">复制链接</string>
    <string name="no_store">暂无数据</string>
    <string name="study">研发计划</string>
    <string name="not_read">未读</string>
    <string name="read">已读</string>


    <string name="gridview_demo">GridViewDemo</string>
    <string name="normal_listview_demo">NormalListViewDemo</string>
    <string name="normal_recyclerview_demo">NormalRecyclerViewDemo</string>
    <string name="swipe_listview_demo">SwipeListViewDemo</string>
    <string name="swipe_recyclerview_demo">SwipeRecyclerViewDemo</string>
    <string name="staggeredgrid_demo">StaggeredGridDemo</string>
    <string name="scrollview_demo">ScrollViewDemo</string>
    <string name="normalview_demo">NormalViewDemo</string>
    <string name="webview_demo">WebViewDemo</string>
    <string name="sticky_nav_demo">StickyNavDemo</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="every_month">每月16号</string>
    <string name="auto_repay">自动还款</string>
    <string name="sure_money">请确保卡上有充足的余额</string>
    <string name="benqi">本期</string>
    <string name="user_agreement">同意用户协议</string>
    <string name="user_agreement_illegal">请勾选协议</string>
</resources>
