<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_action_title_mine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/edit_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-1px"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="-1px"
            android:background="@color/transparent"
            android:divider="@drawable/vertical_line"
            android:orientation="vertical"
            android:showDividers="middle">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/old_pwd"
                    style="@style/edit_forward_text"
                    android:layout_width="@dimen/dp_60"
                    android:text="@string/old_password" />

                <EditText
                    android:id="@+id/et_old_pwd"
                    style="@style/common_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/old_pwd"
                    android:maxLength="16"
                    android:hint="@string/hint_old_pwd"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/new_pwd"
                    style="@style/edit_forward_text"
                    android:layout_width="@dimen/dp_60"
                    android:text="@string/new_password" />

                <EditText
                    android:id="@+id/et_new_pwd"
                    style="@style/common_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/new_pwd"
                    android:hint="@string/hint_new_pwd"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/sure_pwd"
                    style="@style/edit_forward_text"
                    android:layout_width="@dimen/dp_60"
                    android:text="@string/sure_password" />

                <EditText
                    android:id="@+id/et_sure_pwd"
                    style="@style/common_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/sure_pwd"
                    android:hint="@string/hint_sure_pwd"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_commit"
        style="@style/common_button_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/sure" />

</LinearLayout>