<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_action_title_mine" />

    <EditText
        android:id="@+id/et_email"
        style="@style/common_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50"
        android:hint="@string/hint_email"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_content"
        style="@style/common_edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:layout_marginTop="@dimen/dp_30"
        android:hint="@string/hint_feedback" />

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/common_button_two"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/commit"/>

</LinearLayout>