<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_action_title_mine" />

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@color/white">

        <com.toin.work.widget.circleImageView.CircleImageView
            android:id="@+id/img_header"
            android:layout_width="@dimen/circle_header_img"
            android:layout_height="@dimen/circle_header_img"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp_10"
            android:src="@mipmap/header" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp_10"
            android:layout_toRightOf="@+id/img_header"
            android:text="@string/face"
            android:textColor="@color/black"
            android:textSize="@dimen/comment_textSize" />

        <ImageView
            style="@style/more_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@color/white"
        android:divider="@drawable/vertical_line"
        android:orientation="vertical"
        android:showDividers="middle">

        <RelativeLayout
            android:id="@+id/rl_change_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="@dimen/comment_textSize" />

            <ImageView
                style="@style/more_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="@dimen/comment_textSize" />

            <ImageView
                style="@style/more_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_help_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/help_center"
                android:textColor="@color/black"
                android:textSize="@dimen/comment_textSize" />

            <ImageView
                style="@style/more_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="@dimen/comment_textSize" />

            <ImageView
                style="@style/more_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-1px"
        android:layout_marginRight="-1px"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@drawable/shape_exit"
        android:text="@string/safe_exit" />


</LinearLayout>