<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/layout_action_title_mine_black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/img_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_40"
                android:scaleType="centerCrop"
                android:src="@mipmap/login_logo" />

            <LinearLayout
                android:id="@+id/ll_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_header"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:background="@color/white"
                android:divider="@drawable/vertical_line"
                android:orientation="vertical"
                android:showDividers="middle">


                <LinearLayout
                    android:id="@+id/ll_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/dp_80"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile"
                        android:textColor="@color/black"
                        android:textSize="@dimen/comment_textSize" />

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawablePadding="@dimen/dp_5"
                        android:hint="@string/hint_phone"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:padding="@dimen/dp_10"
                        android:singleLine="true"
                        android:textColorHint="@color/gray_hint"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/comment_textSize" />

                    <ImageView
                        android:id="@+id/img_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_10"
                        android:src="@mipmap/cancel"
                        android:visibility="gone" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/ll_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_code_1"
                        android:layout_width="@dimen/dp_80"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/code"
                        android:textColor="@color/black"
                        android:textSize="@dimen/comment_textSize" />

                    <EditText
                        android:id="@+id/et_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_code_1"
                        android:background="@null"
                        android:drawablePadding="@dimen/dp_5"
                        android:hint="@string/hint_code"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="@dimen/dp_10"
                        android:singleLine="true"
                        android:textColorHint="@color/gray_hint"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/comment_textSize" />

                    <TextView
                        android:id="@+id/tv_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dp_10"
                        android:background="@drawable/shape_action_btn"
                        android:paddingBottom="@dimen/dp_3"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingRight="@dimen/dp_10"
                        android:paddingTop="@dimen/dp_3"
                        android:singleLine="true"
                        android:text="@string/get_code"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_username"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/dp_80"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/comment_textSize" />

                    <EditText
                        android:id="@+id/et_pwd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawablePadding="@dimen/dp_5"
                        android:hint="@string/hint_pwd"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:padding="@dimen/dp_10"
                        android:singleLine="true"
                        android:textColorHint="@color/gray_hint"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/comment_textSize" />

                    <ImageView
                        android:id="@+id/img_cancel_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_10"
                        android:src="@mipmap/cancel"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_username"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/dp_80"
                        android:layout_height="wrap_content"
                        android:text="@string/sure_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/comment_textSize" />

                    <EditText
                        android:id="@+id/et_pwd_again"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawablePadding="@dimen/dp_5"
                        android:hint="@string/hint_sure_pwd"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:padding="@dimen/dp_10"
                        android:singleLine="true"
                        android:textColorHint="@color/gray_hint"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/comment_textSize" />

                    <ImageView
                        android:id="@+id/img_cancel_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_10"
                        android:src="@mipmap/cancel"
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/line"
                style="@style/line"
                android:layout_below="@+id/ll_register"
                android:layout_marginLeft="@dimen/dp_20" />

            <TextView
                android:id="@+id/tv_register"
                style="@style/common_button"
                android:layout_below="@+id/line"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_50"
                android:text="@string/sure" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/forget_login"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_14"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/ll_user_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_user_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_user_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/user_agreement"
                    android:textColor="@color/user_agreement"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>